<resources>
    <string name="app_name">LEDController</string>
    <string name="SearchDevice">Nahe Geräte suchen</string>

    <!-- Main Menu -->
    <string name="DisconnectButton">Verbindung Trennen</string>
    <string name="ON">AN</string>
    <string name="OFF">AUS</string>
    <string name="Brightness">Helligkeit</string>

    <!-- BluetoothConnectionActivity -->
    <string name="ChangeSavedDevice">+</string>
    <string name="ConnectToLast">Mit %1$s verbinden!</string>
    <string name="SavedDeviceNotFound">Das gespeicherte Gerät kann nicht gefunden werden</string>
    <string name="NoDeviceSaved">Kein Gerät hinterlegt</string>
    <string name="FailedToConnect">Verbinden gescheitert</string>
    <string name="Connecting">Verbindungsaufbau läuft</string>
    <string name="Version">20201216</string>

    <!-- Add Device Activity -->
    <string name="DeviceSetToSaved">Gerät gespeichert</string>
    <string name="PairedDevicesList">Gepaarte Geräte</string>
    <string name="DiscoverUnpairedDevices">Nahe, noch nicht geparte Geräte</string>

    <!-- Select new Color Activity -->
    <string name="TestColor">Farbe testen</string>
    <string name="ConfirmColor">Speichern</string>
    <string name="CancelColorSelection">Abbrechen</string>

    <!-- Settings Activity -->
    <string name="ConfirmSettings">Bestätigen</string>
    <string name="RestoreDefaultSettings">Zurücksetzen</string>
</resources>
