<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/select_new_color_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <top.defaults.colorpicker.ColorPickerView
        android:id="@+id/DuanHoancolorPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:enableAlpha="false"/>

    <Button
        android:id="@+id/button_test_color"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/TestColor"/>

    <Button
        android:id="@+id/button_confirm_color"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/ConfirmColor"/>

    <Button
        android:id="@+id/button_cancel_color"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/CancelColorSelection"/>

</LinearLayout>