<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical">

    <Button
        android:id="@+id/search_device_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/SearchDevice"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:layout_marginTop="20dp"
        android:text="@string/PairedDevicesList"/>

    <ListView
        android:id="@+id/lvPairedDevices"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="12pt"
        android:text="@string/DiscoverUnpairedDevices"/>

    <ListView
        android:id="@+id/lvUnpairedDevices"
        android:layout_width="360dp"
        android:layout_height="250dp" />

</LinearLayout>