<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_on"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight=".35"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:text="@string/ON" />

        <Button
            android:id="@+id/button_off"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight=".35"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:text="@string/OFF" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="12pt"
        android:textColor="#FFFFFF"
        android:text="@string/Brightness"/>

    <SeekBar
        android:id="@+id/brightness_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="100"
        android:progress="100"/>

    <TextView
        android:id="@+id/brightness_seekbar_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15pt"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"/>

    <include
        layout="@layout/color_picker"
        android:id="@+id/includedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="60dp"/>

    <Button
        android:id="@+id/button_dissconnect"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/DisconnectButton"/>

</LinearLayout>
